2007-07-23  Raja R Harinath  <rharinath@novell.com>

	Fix 'make warnings'.
	* Makefile (LIBRARY_PACKAGE): Set to none.
	(install-local): Remove.

2007-07-21  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/TypeReference.cs
	  Mono.Cecil/TypeSpecification.cs:
		Add a new GetOriginalType () method.

	* Mono.Cecil/MethodReference.cs
	  Mono.Cecil/MethodSpecification.cs:
		Add a new GetOriginalMethod () method.

2007-07-19  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/AssemblyFactory.cs
	  Mono.Cecil.Binary/Image.cs:
		Update the fileinfo after writing an assembly
		to a file.

2007-07-19  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil.Cil/CodeReader.cs
	  Mono.Cecil.Signature/SignatureReader.cs:
		Better handling of the sentil in the varargs methods.

	* Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil/SentinelType.cs
	  Mono.Cecil.Cil/CodeWriter.cs:
	  Mono.Cecil.Signatures/SignatureReader.cs:
		Fix handling of varargs methods.

2007-07-18  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Cil/CodeReader.cs
	  Mono.Cecil.Cil/CodeWriter.cs:
		Deal with non-sense instructions that some
		obfuscators emit.

	* Mono.Cecil/AggressiveReflectionReader.cs:
		Deal with out of range properties.
	* Mono.Cecil.Metadata/StringsHeap.cs:
		Deal with out of range string indexes.

2007-07-17  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/AggressiveReflectionReader.cs:
		Add some gards against zeroed tokens.

	* Mono.Cecil.Metadata/Utilities.cs:
		Return zero instead of throwing on invalid tags.
		Allow Cecil to read assemblies partially broken
		by some obfuscators.

2007-07-14  Gert Driesen  <drieseng@users.sourceforge.net>

	* default.build: Fix relative path to key. Avoid use of ugly foreach
	contruct. Spaces to tabs.
	* Mono.Cecil.csproj: Fix relative path to key.
	* standalone.make: Fix relative path to key and config.make.

2007-07-03  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/BaseAssemblyResolver.cs:
		Expose a way to add default directories